--- a/OrderOfStars/Web.config
+++ b/OrderOfStars/Web.config
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   https://go.microsoft.com/fwlink/?LinkId=301879
@@ -285,14 +285,10 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    <add name="databaseEntities" connectionString="metadata=res://*/Models.UserContext.csdl|res://*/Models.UserContext.ssdl|res://*/Models.UserContext.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\database.mdf;integrated security=True;connect timeout=30;MultipleActiveResultSets=True;App=EntityFramework&quot;"
-      providerName="System.Data.EntityClient" />
-    <add name="UsersContext" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=UsersContext-20170925211822; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|UsersContext-20170925211822.mdf"
-      providerName="System.Data.SqlClient" />
-    <add name="ProjectContext" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=ProjectContext-20170926161508; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|ProjectContext-20170926161508.mdf"
-      providerName="System.Data.SqlClient" />
-    <add name="OrderOfStarsBaseContext" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=OrderOfStarsBaseContext-20170926172700; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|OrderOfStarsBaseContext-20170926172700.mdf"
-      providerName="System.Data.SqlClient" />
+    <add name="databaseEntities" connectionString="metadata=res://*/Models.UserContext.csdl|res://*/Models.UserContext.ssdl|res://*/Models.UserContext.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\database.mdf;integrated security=True;connect timeout=30;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="UsersContext" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=UsersContext-20170925211822; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|UsersContext-20170925211822.mdf" providerName="System.Data.SqlClient" />
+    <add name="ProjectContext" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=ProjectContext-20170926161508; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|ProjectContext-20170926161508.mdf" providerName="System.Data.SqlClient" />
+    <add name="OrderOfStarsBaseContext" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=OrderOfStarsBaseContext-20170926172700; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|OrderOfStarsBaseContext-20170926172700.mdf" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
