Вывод данных их базы на главную страницу.

--- a/OrderOfStars/OrderOfStars.csproj
+++ b/OrderOfStars/OrderOfStars.csproj
@@ -242,7 +242,9 @@
     <Content Include="Scripts\modernizr-2.6.2.js" />
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
-    <Content Include="Web.config" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </Content>
@@ -258,6 +260,7 @@
     <Content Include="Views\Registration\Index.cshtml" />
     <Content Include="Views\Authorization\Index.cshtml" />
     <Content Include="Views\UserMVC\Index.cshtml" />
+    <Content Include="Views\Home\StarCard.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Areas\" />
