--- a/OrderOfStars/packages.config
+++ b/OrderOfStars/packages.config
@@ -13,6 +13,8 @@
   <package id="Microsoft.ApplicationInsights.Web" version="2.2.0" targetFramework="net461" />
   <package id="Microsoft.ApplicationInsights.WindowsServer" version="2.2.0" targetFramework="net461" />
   <package id="Microsoft.ApplicationInsights.WindowsServer.TelemetryChannel" version="2.2.0" targetFramework="net461" />
+  <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net461" />
+  <package id="Microsoft.AspNet.Identity.Owin" version="2.2.1" targetFramework="net461" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.Mvc.ru" version="5.2.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net461" />
@@ -40,9 +42,14 @@
   <package id="Microsoft.Extensions.Options" version="2.0.0" targetFramework="net461" />
   <package id="Microsoft.Extensions.Primitives" version="2.0.0" targetFramework="net461" />
   <package id="Microsoft.Net.Compilers" version="2.1.0" targetFramework="net461" developmentDependency="true" />
+  <package id="Microsoft.Owin" version="2.1.0" targetFramework="net461" />
+  <package id="Microsoft.Owin.Security" version="2.1.0" targetFramework="net461" />
+  <package id="Microsoft.Owin.Security.Cookies" version="2.1.0" targetFramework="net461" />
+  <package id="Microsoft.Owin.Security.OAuth" version="2.1.0" targetFramework="net461" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
   <package id="Modernizr" version="2.6.2" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net461" />
+  <package id="Owin" version="1.0" targetFramework="net461" />
   <package id="Remotion.Linq" version="2.1.1" targetFramework="net461" />
   <package id="Respond" version="1.2.0" targetFramework="net461" />
   <package id="System.Collections" version="4.0.11" targetFramework="net461" />
