--- a/OrderOfStars/Web.config
+++ b/OrderOfStars/Web.config
@@ -276,6 +276,10 @@
         <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
         <bindingRedirect oldVersion="1.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.Owin" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.1.0.0" newVersion="3.1.0.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
   <system.codedom>
@@ -285,9 +289,8 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    <add name="databaseEntities" connectionString="metadata=res://*/Models.UserContext.csdl|res://*/Models.UserContext.ssdl|res://*/Models.UserContext.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\database.mdf;integrated security=True;connect timeout=30;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="UsersContext" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=UsersContext-20170925211822; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|UsersContext-20170925211822.mdf" providerName="System.Data.SqlClient" />
-    <add name="ProjectContext" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=ProjectContext-20170926161508; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|ProjectContext-20170926161508.mdf" providerName="System.Data.SqlClient" />
+    <add name="IdentityDb" providerName="System.Data.SqlClient"
+   connectionString="Data Source=(localdb)\v13.0;AttachDbFilename=|DataDirectory|\IdentityDb.mdf;Integrated Security=True;"/>
     <add name="OrderOfStarsBaseContext" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=OrderOfStarsBaseContext-20170926172700; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|OrderOfStarsBaseContext-20170926172700.mdf" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <entityFramework>
