--- a/OrderOfStars/packages.config
+++ b/OrderOfStars/packages.config
@@ -14,6 +14,7 @@
   <package id="Microsoft.ApplicationInsights.WindowsServer" version="2.2.0" targetFramework="net461" />
   <package id="Microsoft.ApplicationInsights.WindowsServer.TelemetryChannel" version="2.2.0" targetFramework="net461" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net461" />
+  <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.1" targetFramework="net461" />
   <package id="Microsoft.AspNet.Identity.Owin" version="2.2.1" targetFramework="net461" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.Mvc.ru" version="5.2.3" targetFramework="net461" />
@@ -42,7 +43,8 @@
   <package id="Microsoft.Extensions.Options" version="2.0.0" targetFramework="net461" />
   <package id="Microsoft.Extensions.Primitives" version="2.0.0" targetFramework="net461" />
   <package id="Microsoft.Net.Compilers" version="2.1.0" targetFramework="net461" developmentDependency="true" />
-  <package id="Microsoft.Owin" version="2.1.0" targetFramework="net461" />
+  <package id="Microsoft.Owin" version="3.1.0" targetFramework="net461" />
+  <package id="Microsoft.Owin.Host.SystemWeb" version="3.1.0" targetFramework="net461" />
   <package id="Microsoft.Owin.Security" version="2.1.0" targetFramework="net461" />
   <package id="Microsoft.Owin.Security.Cookies" version="2.1.0" targetFramework="net461" />
   <package id="Microsoft.Owin.Security.OAuth" version="2.1.0" targetFramework="net461" />
