--- a/OrderOfStars/OrderOfStars.csproj
+++ b/OrderOfStars/OrderOfStars.csproj
@@ -281,6 +281,8 @@
     </Content>
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\datepicker.css" />
+    <Content Include="Scripts\datepicker.js" />
     <Content Include="Content\Images\logo.png" />
     <Content Include="Content\Images\noAva.png" />
     <Content Include="favicon.ico" />
