--- a/OrderOfStars/Web.config
+++ b/OrderOfStars/Web.config
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   https://go.microsoft.com/fwlink/?LinkId=301879
@@ -290,12 +290,9 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    <add name="IdentityDb" connectionString="Data Source=(localdb)\v13.0;AttachDbFilename=|DataDirectory|\IdentityDb.mdf;Integrated Security=True;"
-      providerName="System.Data.SqlClient" />
-    <add name="OrderOfStarsBaseContext" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=OrderOfStarsBaseContext-20170926172700; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|OrderOfStarsBaseContext-20170926172700.mdf"
-      providerName="System.Data.SqlClient" />
-    <add name="OrderOfStarsContext" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=OrderOfStarsContext-20171021005302; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|OrderOfStarsContext-20171021005302.mdf"
-      providerName="System.Data.SqlClient" />
+    <add name="IdentityDb" connectionString="Data Source=(localdb)\v13.0;AttachDbFilename=|DataDirectory|\IdentityDb.mdf;Integrated Security=True;" providerName="System.Data.SqlClient" />
+    <add name="OrderOfStarsBaseContext" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=OrderOfStarsBaseContext-20170926172700; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|OrderOfStarsBaseContext-20170926172700.mdf" providerName="System.Data.SqlClient" />
+    <add name="OrderOfStarsContext" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=OrderOfStarsContext-20171021005302; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|OrderOfStarsContext-20171021005302.mdf" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
