--- a/OrderOfStars/OrderOfStars.csproj
+++ b/OrderOfStars/OrderOfStars.csproj
@@ -283,6 +283,7 @@
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\datepicker.css" />
+    <Content Include="Content\Images\logo-min.png" />
     <Content Include="Scripts\datepicker.js" />
     <Content Include="Content\Images\logo.png" />
     <Content Include="Content\Images\noAva.png" />
