--- a/OrderOfStars/OrderOfStars.csproj
+++ b/OrderOfStars/OrderOfStars.csproj
@@ -284,6 +284,7 @@
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\datepicker.css" />
     <Content Include="Content\Images\logo-min.png" />
+    <Content Include="Content\Media.css" />
     <Content Include="Scripts\datepicker.js" />
     <Content Include="Content\Images\logo.png" />
     <Content Include="Content\Images\noAva.png" />
@@ -330,6 +331,7 @@
     <Content Include="Views\Admin\UsersAndRoles.cshtml" />
     <Content Include="Views\Admin\AddRoleToUser.cshtml" />
     <Content Include="Views\Admin\Orders.cshtml" />
+    <Content Include="Views\Admin\UploadPhoto.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
