--- a/OrderOfStars/packages.config
+++ b/OrderOfStars/packages.config
@@ -5,6 +5,10 @@
   <package id="EntityFramework" version="6.1.3" targetFramework="net461" />
   <package id="EntityFramework.ru" version="6.1.3" targetFramework="net461" />
   <package id="GitForWindows" version="2.14.2" targetFramework="net461" />
+  <package id="ImageResizer" version="4.1.10" targetFramework="net461" />
+  <package id="ImageResizer.Plugins.DiskCache" version="4.1.10" targetFramework="net461" />
+  <package id="ImageResizer.Plugins.PrettyGifs" version="4.1.10" targetFramework="net461" />
+  <package id="ImageResizer.WebConfig" version="4.1.10" targetFramework="net461" />
   <package id="jQuery" version="1.10.2" targetFramework="net461" />
   <package id="Microsoft.ApplicationInsights" version="2.2.0" targetFramework="net461" />
   <package id="Microsoft.ApplicationInsights.Agent.Intercept" version="2.0.6" targetFramework="net461" />
